# aidevs2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
common/: aidevs_responsehandler.py  aidevs_taskhandler.py  constants.py  files_read_and_download.py  logger_setup.py  measurement.py
docker_compose/qdrant/: docker-compose.yml
documentation/: model_definitions.md  openAI_error_types_en.txt  openAI_error_types_pl.txt
samples/02_langchain_format/: prompt_context.py
samples/whisper/: whisper_sample.py
tasks/c01l01/: c01l01_helloapi.py
tasks/c01l04/: c01l04_01a_blogger.py
tasks/c01l05/: c01l05_liar.py
tasks/c02l01/: C0201_prompt
tasks/c02l02/: c02l02_inprompt.py
tasks/c02l03/: c02l03_embedding.py
tasks/c02l04/: c02l04_whisper_openAI_part.py
tasks/c02l05/: c02l05_function_calling.py  c02l05_prompt.txt
tasks/c03l01/: c03l01_prompt.txt  c03l01_rodo.py
tasks/c03l02/: c03l02_prompt.txt  c03l02_scraper.py  c03l02_scraper_openAi_part.py  text_pasta_history.txt  text_pizza_history.txt
tasks/c03l03/: c03l03_whoami.py
tasks/c03l04/: archiwum.json  c03l04_search.py  create_DB.sql  unknow_database_storage.py
tasks/c03l05/: C03L05_people.py  C03L05_people_openAI_part.py  c03l05_stars_prompt.txt  name_category_system_prompt.txt
tasks/c04l01/: C04L01_knowledge.py
tasks/c04l02/: C04L02_tools.py
